added additional node packages for Azure

--- a/src/dragdrop.html
+++ b/src/dragdrop.html
@@ -40,7 +40,12 @@
     </style>
     <script>var exports = {};</script>
     <!-- Azure Storage SDK -->
+
+    <script src="https://www.jsdelivr.com/package/npm/@azure-rest/core-client"></script>
+    <script src="https://www.jsdelivr.com/package/npm/@azure/static-web-apps-cli"></script>
+    <script src="https://www.jsdelivr.com/package/npm/@azure/core-http-compat"></script>
     <script src="https://cdn.jsdelivr.net/npm/@azure/storage-blob@latest"></script>
+
 </head>
 
 <body>
